--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./images/favicicon.png" type="image/png" />
+    <link rel="icon" href="/images/favicicon.png" type="image/png" />
     <title>Expensify App - React Edition</title>
   </head>
   <body>
     <div id="app"></div>
-    <script src="./main-bundle.js"></script>
+    <script src="/main-bundle.js"></script>
   </body>
 </html>
