--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type ="text/css"  href="styles.css" />
+    <link rel="stylesheet" type ="text/css"  href="/dist/styles.css" />
     <link rel="icon" href="/images/favicon.png" type="image/png" />
     <title>Expensify App - React Edition</title>
   </head>
   <body>
     <div id="app"></div>
-    <script src="./main-bundle.js"></script>
+    <script src="/dist/main-bundle.js"></script>
   </body>
 </html>
